--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 		<script type="text/javascript" src="ui-bootstrap-tpls-0.3.0.min.js"></script>
+		<script type="text/javascript" src="ng-upload.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controllers/start.js"></script>
 		<script src="controllers/plan.js"></script>
