--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 		<script src="controllers/upload.js"></script>
 		<script src="controllers/view.js"></script>
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-		<link href="views/start.css" rel="stylesheet">
+		<link href="bike.css" rel="stylesheet">
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+		<!--[if lte IE 8]>
+			<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
+		<![endif]-->
+		<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 	</head>
 	<body class="container-fluid" >
 		<div class="row-fluid">
