--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html ng-app="BIKE">
 	<head>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-		<script type="text/javascript" src="ui-bootstrap-tpls-0.3.0.min.js"></script>
-		<script type="text/javascript" src="ng-upload.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/angular.min.js"></script>
+		<script src="assets/js/ui-bootstrap-tpls-0.3.0.min.js"></script>
+		<script src="assets/js/ng-upload.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controllers/start.js"></script>
 		<script src="controllers/plan.js"></script>
 		<script src="controllers/upload.js"></script>
 		<script src="controllers/view.js"></script>
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+		<link href="assets/css/bootstrap-combined.min.css" rel="stylesheet">
 		<link href="bike.css" rel="stylesheet">
-		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+		<link rel="stylesheet" href="assets/css/leaflet.css" />
 		<!--[if lte IE 8]>
 			<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 		<![endif]-->
-		<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+		<script src="assets/js/leaflet.js"></script>
 	</head>
 	<body class="container-fluid" >
 		<div class="row-fluid">
